<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageActivity"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/status"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_marginBottom="5dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reset"
        android:text="@string/reset"
        android:onClick="resetSett"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout_buttons"
        >

        <Button
            android:id="@+id/btnListen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/etMessage"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:text="@string/beAServer"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnDeviceList"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/btnListen"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="5dp"

            android:layout_weight="1"
            android:text="@string/beAClient"/>


    </LinearLayout>


    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_alignParentTop="true"
         android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"/>




    <ListView
        android:id="@+id/mojawiadomosc"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="228dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/hintWriteMessage"
            android:layout_weight="3"
            android:layout_marginLeft="5dp"
            android:gravity="center|bottom"
            />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="108dp"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:text="@string/sendButtonText"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            />
    </LinearLayout>



</LinearLayout>