<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about1"
        android:id="@+id/about1"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about2"
        android:layout_below="@+id/about1"
        android:id="@+id/about2"
        android:gravity="center_horizontal"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about3"
        android:layout_below="@+id/about2"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textSize="15sp"/>

</RelativeLayout>